fix dark mode

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1 {
         text-decoration: underline;
     }
 
-    h1 {
+    header {
         border-bottom: 0.08em solid white;
     }
 
